--- a/npcs/Races Classes and Subclasses/fighter_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/fighter_subclasses.yaml
@@ -462,7 +462,7 @@
                            
                            
                            
-  - title: Derish Abilities
+  - title: Dervish Abilities
   - abilities: 
     - title: Fleet of Foot
     - content: While you're not wearing heavy armor or weilding a shield, your speed increases by 5 feet and you can take the Dash action as a bonus action. Speed increases by 10 feet at 7th Level, 15 feet at 10th Level
