--- a/npcs/oomuk_the_seeker.yaml
+++ b/npcs/oomuk_the_seeker.yaml
@@ -461,45 +461,87 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:       
-    - Aarakocra Abilities:
-      - Flight: Flying speed is 50 feet
-        Talons: Proficiency in Unarmed Strikes, doing 1d4 slashing damage
-      Cleric Abilities:
-      - Spellcasting: 
-        - Spell DC: 15
-          Cantrips: Guidance, Toll the Dead, Thaumaturgy, Light
-          1st Level: Bane, Bless, Sanctuary, Inflict Wounds
-          2nd Level: Locate Object, Spiritual Weapon, Calm Emotions
-          3rd Level: Clairvoyance, Tongues, Remove Curse
-        Channel Divinity: Turn Undead, Destroy Undead
-     
-      Knowledge Domain Abilities: 
-      - Spellcasting: 
-        - Spell DC: 15
-          1st Level: Command, Identify
-          3rd Level: Augury, Suggestion
-          5th Level: Nondetection, Speak with Dead
-        Blessing of Knowledge: Your proficiency bonus is doubled for any ability check you make that uses History or Arcana
-        Channel Divinity:
-        - Knowledge of Ages: you can use your Channel Divinity to tap into a divine well of knowledge. As an action, you choose one skill or tool. For 10 minutes, you have proficiency with the chosen skill or tool 
-          Read Thoughts: you can use your Channel Divinity to read a creature's thoughts. You can then use your access to the creature's mind to command it. As an action, choose one creature that you can see within 60 feet of
-                         you. That creature must make a Wisdom saving throw. If the creature succeeds on the saving throw, you can't use this feature on it again until you finish a long rest. If the creature fails its save, you
-                         can read its surface thoughts (those foremost in its mind, reflecting its current emotions and what it is actively thinking about) when it is within 60 feet of you. This effect lasts for 1 minute. During
-                         that time, you can use your action to end this effect and cast the Suggestion spell on the creature without expending a spell slot. The target automatically fails its saving throw against the spell.
+    saving-throws:
+    - Constitution
+    - Intelligence
+    - Wisdom
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
+    skills:
+    - Research
+    proficiencies:
+    - Arcana
+    - History
+    - Medicine    
+    - Insight
+  special-abilities:       
+  - title: Aarakocra Abilities
+  - abilities: 
+    - title: Flight
+    - content: Flying speed is 50 feet
+    - title: Talons
+    - content: Proficiency in Unarmed Strikes, doing 1d4 slashing damage
+  - title: Cleric Abilities
+  - abilities:
+  - title: Cleric Spellcasting
+  - abilities: 
+    - title: Spell DC
+    - content: 15
+    - title: Cantrips
+    - content: Guidance, Toll the Dead, Thaumaturgy, Light
+    - title: 1st Level
+    - content: Bane, Bless, Sanctuary, Inflict Wounds
+    - title: 2nd Level
+    - content: Locate Object, Spiritual Weapon, Calm Emotions
+    - title: 3rd Level
+    - content: Clairvoyance, Tongues, Remove Curse
+  - title: Channel Divinity
+  - abilities:    
+    - title: Turn Undead
+    - content: As an action, you present your holy Symbol and speak a prayer censuring the Undead. Each Undead that can see or hear you within 30 feet of you must make a Wisdom saving throw. If the creature fails its saving 
+               throw, it is turned for 1 minute or until it takes any damage. A turned creature must spend its turns trying to move as far away from you as it can, and it can't willingly move to a space within 30 feet of you. 
+               It also can't take Reactions. For its action, it can use only the Dash action or try to Escape from an Effect that prevents it from moving. If there's nowhere to move, the creature can use the Dodge action.    
+    - title: Destroy Undead
+    - content: Starting at 5th Level, when an Undead of CR 1/2 or lower fails its saving throw against Your Turn Undead feature, the creature is instantly destroyed.
+  - title: Knowledge Domain Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content: 15
+    - title: 1st Level
+    - content: Command, Identify
+    - title: 3rd Level
+    - content: Augury, Suggestion
+    - title: 5th Level
+    - content: Nondetection, Speak with Dead
+    - title: Blessing of Knowledge
+    - content: You learn two languages of your choice. You also become proficient in your choice of two of the following skills; Arcana, History, Nature, or Religion. Your proficiency bonus is doubled for any 
+               ability check you make that uses either of those skills.
+    - title: Channel Divinity - Knowledge of Ages
+    - content: You can use your Channel Divinity to tap into a divine well of knowledge. As an action, you choose one skill or tool. For 10 minutes, you have proficiency with the chosen skill or tool.
+    - title: Channel Divinity - Read Thoughts
+    - content: You can use your Channel Divinity to read a creature's thoughts. You can then use your access to the creature's mind to command it. As an action, choose one creature that you can see within 60 feet of 
+               you. That creature must make a Wisdom saving throw. If the creature succeeds on the saving throw, you can't use this feature on it again until you finish a long rest. If the creature fails its save, 
+               you can read its surface thoughts (those foremost in its mind, reflecting its current emotions and what it is actively thinking about) when it is within 60 feet of you. This effect lasts for 1 minute. 
+               During that time, you can use your action to end this effect and cast the Suggestion spell on the creature without expending a spell slot. The target automatically fails its saving throw against the 
+               spell.
 
-    special-abilities:
-       - Proficiencies: History, Arcana, Medicine, Insight
-         Feats: N/A
-
-    attacks: |
-      1 spell attack
-    combat-tactics: |
-      will go out of his way not to fight
-    special-equipment:
-       - Staff of Healing: This staff has 10 Charges. While holding it, you can use an action to expend 1 or more of its Charges to cast one of the following Spells from it, using your spell save DC and Spellcasting Ability
-                           modifier -  Cure Wounds (1 charge per Spell Level, up to 4th), Lesser Restoration (2 charges). or Mass Cure Wounds (5 charges). The staff regains 1d6 + 4 expended Charges daily at dawn. If you expend
-                           the last charge, roll a d20. On a 1. the staff vanishes in a flash of light, lost forever       
+  - title: Attacks
+  - content: 1 spell attack
+  - title: Combat Tactics
+  - content: will go out of his way not to fight
+  
+  - title: Special Equipment
+  - abilities:
+    - title: Staff of Healing
+    - content: This staff has 10 Charges. While holding it, you can use an action to expend 1 or more of its Charges to cast one of the following Spells from it, using your spell save DC and Spellcasting Ability
+               modifier -  Cure Wounds (1 charge per Spell Level, up to 4th), Lesser Restoration (2 charges). or Mass Cure Wounds (5 charges). The staff regains 1d6 + 4 expended Charges daily at dawn. If you expend
+               the last charge, roll a d20. On a 1. the staff vanishes in a flash of light, lost forever       
 
   profile:
 
